# CodeEval

./: CodeEval.cabal  LICENSE  README.md
app/: Main.hs
src/: Common.hs  FizzBuzz.hs  Parsers.hs  PrimePalindrome.hs  ReverseWords.hs  SumOfPrimes.hs
src/Examples/: FizzBuzz.hs
test/: FizzBuzzTests.hs  PrimePalindromeTests.hs  ReverseWordsTests.hs  Spec.hs  SumOfPrimesTests.hs
