name:                CodeEval
version:             0.1.0.0
synopsis:            Contains solutions to challenges from www.codeeval.com
description:         Please see README.md
homepage:            https://github.com/RaphMad/CodeEval#readme
license:             MIT
license-file:        LICENSE
author:              Raphael Mader
maintainer:          RaphMad@users.noreply.github.com
copyright:           (c) 2016 Raphael Mader
category:            Competitions
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FizzBuzz
  build-depends:       base >= 4.7 && < 5,
                       attoparsec
  default-language:    Haskell2010

executable CodeEval-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , CodeEval
  default-language:    Haskell2010

test-suite CodeEval-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       FizzBuzzTests
  build-depends:       base
                     , hspec
                     , CodeEval
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/RaphMad/CodeEval
